[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/actors/PlayerNoGuns.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Brightly Crush Shine.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/PCLIGHT.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/apartment231GREEN.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/PlayerProfile.png" type="Texture" id=5]
[ext_resource path="res://src/World1.gd" type="Script" id=6]
[ext_resource path="res://assets/Sounds/Anti Aircraft Gun-SoundBible.com-1303768514.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Sounds/Tornado_Siren_II-Delilah-747233690.wav" type="AudioStream" id=8]
[ext_resource path="res://src/backyard1.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/objects/drink_on_side.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54.1109, 85.643 )

[sub_resource type="Animation" id=3]
resource_name = "FlashingLight"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D2:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.57, 1.95, 0.57 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D3:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.57, 1.86 ]
}

[sub_resource type="Animation" id=4]
length = 3.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.45098 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.45098 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Meteorite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CanvasLayer/TalkBox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22.8911, 13.3665 )

[node name="World" type="Node2D"]
script = ExtResource( 6 )
backyard1 = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 515, 300 )
scale = Vector2( 4, 4 )
z_index = -100
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 848.113
margin_top = 74.1356
margin_right = 953.113
margin_bottom = 190.136
text = "WASD to move
LClick to shoot
1 for pistol
2 for Assult Rifle
3 for SMG
Space to dash
R to Reload
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HouseCollisions" type="Node2D" parent="."]

[node name="wall1" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/wall1"]
polygon = PoolVector2Array( 133.641, 542.973, 116.536, 541.344, 117.351, 597.545, 132.826, 597.545 )

[node name="wall2" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/wall2"]
position = Vector2( 265.832, -499.854 )
polygon = PoolVector2Array( 137.469, 499.981, 117.525, 502.197, 120.13, 769.907, 134.705, 766.478 )

[node name="wall3" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/wall3"]
position = Vector2( 265.832, -499.854 )
polygon = PoolVector2Array( 16.2659, 769.409, 16.3879, 752.76, -261.104, 752.164, -264.62, 769.745 )

[node name="wall4" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/wall4"]
position = Vector2( 1055.77, -382.586 )
polygon = PoolVector2Array( 16.2659, 769.409, 16.3879, 752.76, -262.854, 752.4, -264.62, 769.745 )

[node name="Desk+Wall" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/Desk+Wall"]
position = Vector2( 1055.77, -382.586 )
polygon = PoolVector2Array( -423.528, 975.846, -346.181, 975.846, -346.181, 753.627, -507.417, 751.963, -506.876, 768.173, -362.141, 769.587, -363.369, 818.696, -423.528, 818.696 )

[node name="Bathroom+Bed" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/Bathroom+Bed"]
position = Vector2( 1055.77, -382.586 )
polygon = PoolVector2Array( -921.267, 979.669, -921.195, 919.354, -802.917, 919.392, -788.951, 902.485, -733.819, 901.75, -734.554, 844.413, -919.797, 845.148, -938.909, 841.472, -938.909, 752.526, -589.742, 751.056, -589.742, 769.434, -713.237, 768.698, -713.237, 826.035, -713.999, 915.216, -714.771, 985.585, -623.771, 980.585, -598.771, 979.585, -598.771, 932.585, -552.772, 933.585, -550.772, 996.585 )

[node name="Couch" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/Couch"]
position = Vector2( 1055.77, -382.586 )
polygon = PoolVector2Array( -192.767, 591.27, -192.664, 637.437, -424.165, 638.005, -427.578, 578.282, -408.239, 578.85, -407.67, 586.245, -285.379, 585.676, -285.379, 579.419, -263.764, 578.85, -264.333, 590.226 )

[node name="LivingR_Boxes" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/LivingR_Boxes"]
position = Vector2( 1055.77, -382.586 )
polygon = PoolVector2Array( -565.058, 421.89, -564.323, 486.578, -588.58, 499.074, -590.051, 559.351, -651.798, 560.822, -654.738, 422.625 )

[node name="Boxes_SpareRoom" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/Boxes_SpareRoom"]
position = Vector2( 1055.77, -382.586 )
polygon = PoolVector2Array( -913.162, 384.468, -911.935, 453.221, -892.291, 456.904, -893.519, 519.518, -909.479, 529.34, -907.024, 590.727, -975.777, 593.182, -977.005, 632.47, -1058.03, 632.47, -1059.26, 375.874 )

[node name="Perimeter" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/Perimeter"]
polygon = PoolVector2Array( 0.534912, 597.119, 1027.14, 595.171, 1023.24, 1.02759, -1.41313, 1.02759, 4.94635, 588.842, -74.0007, 583.578, -83.9981, -117.633, 1145.84, -107.873, 1145.84, 741.3, -80.7446, 738.046, -74.2375, 607.905 )

[node name="TV" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/TV"]
polygon = PoolVector2Array( 633.999, 10.9996, 642.999, -6.00034, 780.998, -8.00034, 788.998, 9.99959 )

[node name="Kitchen" type="KinematicBody2D" parent="HouseCollisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HouseCollisions/Kitchen"]
polygon = PoolVector2Array( 1023.47, 536.72, 711.637, 536.72, 711.637, 611.002, 1028.89, 604.812 )

[node name="PlayerNoGuns" parent="." instance=ExtResource( 1 )]
position = Vector2( 605.016, 512.682 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkBox" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = 134.0
margin_top = 537.0
margin_right = 1022.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( 232.522, 96.2866 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkText" type="Label" parent="CanvasLayer/TalkBox"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1.24194
margin_top = 4.55042
margin_right = 862.242
margin_bottom = 39.5504
custom_fonts/font = SubResource( 1 )
text = "*Yahn* I should get to bed now. All this work is making me super tired.
(WASD to move, E to interact)
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBG" type="ColorRect" parent="CanvasLayer/TalkBox"]
margin_left = -130.0
margin_top = -79.0
margin_right = -4.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 232.522, 96.2866 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerProfile" type="Sprite" parent="CanvasLayer/TalkBox"]
position = Vector2( -63.6027, -9.94153 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 574.887, 511.327 )
texture = ExtResource( 3 )
texture_scale = 1.52
color = Color( 0.215686, 0.215686, 0.607843, 1 )
energy = 1.99

[node name="Bed" type="Area2D" parent="."]
position = Vector2( 386.731, 508.273 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed"]
position = Vector2( 12.403, 0.675507 )
shape = SubResource( 2 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/FlashingLight = SubResource( 3 )
anims/Sleep = SubResource( 4 )

[node name="Meteorite" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Siren" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -25.732

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( 942.899, 100.674 )
rotation = -1.55931
texture = ExtResource( 3 )
texture_scale = 1.52
color = Color( 1, 0, 0, 1 )
energy = 0.57

[node name="Light2D3" type="Light2D" parent="."]
visible = false
position = Vector2( 565.985, 169.427 )
rotation = -1.55931
texture = ExtResource( 3 )
texture_scale = 2.55
color = Color( 1, 0, 0, 1 )
energy = 0.57

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 890.106, 7.36639 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 53.9997, 9.99996 )
shape = SubResource( 5 )

[node name="drink_on_side" parent="." instance=ExtResource( 10 )]
position = Vector2( 578, 197 )
[connection signal="body_entered" from="Bed" to="." method="_on_Bed_body_entered"]
[connection signal="body_exited" from="Bed" to="." method="_on_Bed_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[editable path="PlayerNoGuns"]
